# mpc-av

./: CMakeLists.txt  README.md  install-mac.sh
src/: MPC.cpp  MPC.h  helpers.h  main.cpp
